--- a/diag/admin/index.html
+++ b/diag/admin/index.html
@@ -121,6 +121,16 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" data-view="vulnerabilities">
+                  <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="ti ti-bug"></i>
+                  </span>
+                  <span class="nav-link-title">
+                    Vulnerabilities
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#" data-view="reports">
                   <span class="nav-link-icon d-md-none d-lg-inline-block">
                     <i class="ti ti-file-analytics"></i>
@@ -191,6 +201,7 @@
 
   <!-- Custom App Logic -->
   <script src="js/dataService.js"></script>
+  <script src="js/threatIntel.js"></script>
   <script src="js/router.js"></script>
   <script src="js/timeUtils.js"></script>
   <script src="js/uiUtils.js"></script>
@@ -205,9 +216,18 @@
   <script src="./js/appsView.js"></script>
   <script src="./js/deviceView.js"></script>
   <script src="./js/perfView.js"></script>
-  <script src="./js/installsView.js"></script>
   <script src="./js/securityView.js"></script>
   <script src="./js/reportsView.js"></script>
+  <script src="./js/vulnsView.js"></script>
+
+  <!-- Utilities -->
+  <script src="js/uiUtils.js"></script>
+  <script src="js/charting.js"></script>
+  <script src="js/orgSwitcher.js"></script>
+  <script src="js/themeSwitcher.js"></script>
+  <script src="js/deviceFilter.js"></script>
+  <script src="./js/kpiCards.js"></script>
+  <script src="./js/charting.js"></script>
 
   <!-- Main App -->
   <script src="./js/app.js"></script>
